test/corpus/body.txt
===========||
Simple Body
===========||
---
to: app/emails/example.html
---

test body

---||

(template
  (frontmatter
    (metadata
      (key)
      (value (string_value))))
  (body
    (content)))
