test/corpus/frontmatter.test
=================||
Empty Frontmatter
=================||
---
---
---||

(template
  (frontmatter))

=================||
Basic Frontmatter
=================||
---
to: app/emails/example.html
---
---||

(template
  (frontmatter
    (metadata
      (key)
      (value (string_value)))))

===========================||
Frontmatter Simple Metadata
===========================||
---
title: Example
subject: Example
to: app/emails/example.html
---
---||

(template
  (frontmatter
    (metadata
      key: (key)
      value: (value (string_value)))
    (metadata
      key: (key)
      value: (value (string_value)))
    (metadata
      key: (key)
      value: (value (string_value)))))

==========================||
Frontmatter with variables
==========================||
---
to: app/emails/<%= name %>.html
---
---||

(template
  (frontmatter
    (metadata
      (key)
      (value
        (string_value)
        (output_directive
          (code))
        (string_value)))))

=====================================||
Frontmatter with strings and booleans
=====================================||
---
to: app/emails/example.html
unless_exists: true
unless_exists: false
---
---||

(template
  (frontmatter
    (metadata
      (key)
      (value
        (string_value)))
    (metadata
      (key)
      (value
        (true)))
    (metadata
      (key)
      (value
        (false)))))

================================||
With string, booleans and number
================================||
---
to: app/emails/example.html
unless_exists: true
at_line: 1
---
---||

(template
  (frontmatter
    (metadata
      (key)
      (value
        (string_value)))
    (metadata
      (key)
      (value
        (true)))
    (metadata
      (key)
      (value (number)))))

========||
Comments
========||
---
to: this/path/please.md
# sure
---
---||
(template
  (frontmatter
    (metadata
      (key)
      (value
        (string_value)))
    (frontmatter_comment)))
