test/corpus/frontmatter.txt
==============||
No frontmatter

:error
==============||

test body

---||

(template)

=================||
Basic Frontmatter
=================||

---
to: app/emails/example.html
---

---||

(template
  (frontmatter
    (metadata
      (key)
      (value))))

===========================||
Frontmatter Simple Metadata
===========================||

---
title: Example
subject: Example
to: app/emails/example.html
---

---||

(template
  (frontmatter
    (metadata
      key: (key)
      value: (value))
    (metadata
      key: (key)
      value: (value))
    (metadata
      key: (key)
      value: (value))))
